Bug 212058 - kopete crashes adding msn account offline
Summary: kopete crashes adding msn account offline
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-27 14:35 UTC by Pedro Celestino Reis Rodrigues
Modified: 2009-10-30 01:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pedro Celestino Reis Rodrigues 2009-10-27 14:35:18 UTC
Application that crashed: kopete
Version of the application: 0.70.90
KDE Version: 4.3.1 (KDE 4.3.1)
Qt Version: 4.5.2
Operating System: Linux 2.6.30-1-amd64 x86_64
Distribution: Debian GNU/Linux testing (squeeze)

What I was doing when the application crashed:
Any atempt to add a msn contact in kopette while in offline state results in a crash.
It would be fantastic if the add contact operation could be cached until the next online session.
However, preventing the crash and giving an error message would be very nice.

Thank you for your great work

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 1 (Thread 0xf55d0700 (LWP 5877))]

Thread 2 (Thread 0xf2dadb90 (LWP 5878)):
#0  0xf7f00430 in __kernel_vsyscall ()
#1  0xf5bcff65 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xf66b685d in pthread_cond_wait () from /lib/i686/cmov/libc.so.6
#3  0xf722a562 in QWaitConditionPrivate::wait (this=0x8b92368, mutex=0x8b92364, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#4  QWaitCondition::wait (this=0x8b92368, mutex=0x8b92364, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#5  0xf5eca67a in QHostInfoAgent::run (this=0x8b92358) at kernel/qhostinfo.cpp:260
#6  0xf7229582 in QThreadPrivate::start (arg=0x8b92358) at thread/qthread_unix.cpp:188
#7  0xf5bcc4b5 in start_thread () from /lib/i686/cmov/libpthread.so.0
#8  0xf66a7a5e in clone () from /lib/i686/cmov/libc.so.6

Thread 1 (Thread 0xf55d0700 (LWP 5877)):
[KCrash Handler]
#6  0xf339ba90 in WlmAccount::createContact (this=0x89e2258, contactId=..., parentContact=0x8d6d9e0) at ../../../../kopete/protocols/wlm/wlmaccount.cpp:148
#7  0xf7dcb277 in Kopete::Account::addContact (this=0x89e2258, contactId=..., parent=0x8d6d9e0, mode=Kopete::Account::ChangeKABC) at ../../../kopete/libkopete/kopeteaccount.cpp:371
#8  0xf3380e1d in WlmAddContactPage::apply (this=0x8d1a2a0, account=0x89e2258, metaContact=0x8d6d9e0) at ../../../../kopete/protocols/wlm/ui/wlmaddcontactpage.cpp:50
#9  0x08068293 in KopeteWindow::showAddContactDialog (this=0x87af090, account=0x89e2258) at ../../../kopete/kopete/kopetewindow.cpp:1325
#10 0x0806854f in KopeteWindow::slotAddContactDialogInternal (this=0x87af090, accountIdentifier=...) at ../../../kopete/kopete/kopetewindow.cpp:1266
#11 0x08068611 in KopeteWindow::qt_metacall (this=0x87af090, _c=QMetaObject::InvokeMetaMethod, _id=38, _a=0xff8361dc) at ./kopetewindow.moc:174
#12 0xf732fb33 in QMetaObject::activate (sender=0x87f21e0, from_signal_index=5, to_signal_index=5, argv=0xff8361dc) at kernel/qobject.cpp:3112
#13 0xf7330782 in QMetaObject::activate (sender=0x87f21e0, m=0xf740ad58, local_signal_index=1, argv=0xff8361dc) at kernel/qobject.cpp:3186
#14 0xf7333353 in QSignalMapper::mapped (this=0x87f21e0, _t1=...) at .moc/release-shared/moc_qsignalmapper.cpp:102
#15 0xf7333c7d in QSignalMapper::map (this=0x87f21e0, sender=0x8a16958) at kernel/qsignalmapper.cpp:268
#16 0xf7333e1e in QSignalMapper::map (this=0x87f21e0) at kernel/qsignalmapper.cpp:257
#17 0xf73346eb in QSignalMapper::qt_metacall (this=0x87f21e0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xff83635c) at .moc/release-shared/moc_qsignalmapper.cpp:81
#18 0xf732fb33 in QMetaObject::activate (sender=0x8a16958, from_signal_index=5, to_signal_index=6, argv=0xff83635c) at kernel/qobject.cpp:3112
#19 0xf732ff60 in QMetaObject::activate (sender=0x8a16958, m=0xf71b26c8, from_local_signal_index=1, to_local_signal_index=2, argv=0xff83635c) at kernel/qobject.cpp:3206
#20 0xf6954311 in QAction::triggered (this=0x8a16958, _t1=false) at .moc/release-shared/moc_qaction.cpp:236
#21 0xf695585f in QAction::activate (this=0x8a16958, event=QAction::Trigger) at kernel/qaction.cpp:1160
#22 0xf6d9ace4 in QMenuPrivate::activateCausedStack (this=0x8843e58, causedStack=..., action=0x8a16958, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:967
#23 0xf6da13eb in QMenuPrivate::activateAction (this=0x8843e58, action=0x8a16958, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1060
#24 0xf6da1f32 in QMenu::mouseReleaseEvent (this=0x88fabf0, e=0xff836b3c) at widgets/qmenu.cpp:2254
#25 0xf79759a5 in KMenu::mouseReleaseEvent (this=0x88fabf0, e=0xff836b3c) at ../../kdeui/widgets/kmenu.cpp:456
#26 0xf69b077b in QWidget::event (this=0x88fabf0, event=0xff836b3c) at kernel/qwidget.cpp:7549
#27 0xf6da4171 in QMenu::event (this=0x88fabf0, e=0xff836b3c) at widgets/qmenu.cpp:2353
#28 0xf695a814 in QApplicationPrivate::notify_helper (this=0x873a858, receiver=0x88fabf0, e=0xff836b3c) at kernel/qapplication.cpp:4056
#29 0xf69632e1 in QApplication::notify (this=0xff83a52c, receiver=0x88fabf0, e=0xff836b3c) at kernel/qapplication.cpp:3758
#30 0xf788f4ad in KApplication::notify (this=0xff83a52c, receiver=0x88fabf0, event=0xff836b3c) at ../../kdeui/kernel/kapplication.cpp:302
#31 0xf731a9cb in QCoreApplication::notifyInternal (this=0xff83a52c, receiver=0x88fabf0, event=0xff836b3c) at kernel/qcoreapplication.cpp:610
#32 0xf696236e in QCoreApplication::sendSpontaneousEvent (receiver=0x88fabf0, event=0xff836b3c, alienWidget=0x0, nativeWidget=0x88fabf0, buttonDown=0xf71d0aa0, lastMouseReceiver=...)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#33 QApplicationPrivate::sendMouseEvent (receiver=0x88fabf0, event=0xff836b3c, alienWidget=0x0, nativeWidget=0x88fabf0, buttonDown=0xf71d0aa0, lastMouseReceiver=...) at kernel/qapplication.cpp:2924
#34 0xf69d10ef in QETWidget::translateMouseEvent (this=0x88fabf0, event=0xff8380ec) at kernel/qapplication_x11.cpp:4343
#35 0xf69d0386 in QApplication::x11ProcessEvent (this=0xff83a52c, event=0xff8380ec) at kernel/qapplication_x11.cpp:3428
#36 0xf69fa892 in x11EventSourceDispatch (s=0x873d6b0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#37 0xf5c19e98 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#38 0xf5c1d623 in ?? () from /lib/libglib-2.0.so.0
#39 0xf5c1d7a8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#40 0xf7345858 in QEventDispatcherGlib::processEvents (this=0x873a820, flags=...) at kernel/qeventdispatcher_glib.cpp:327
#41 0xf69f9fd5 in QGuiEventDispatcherGlib::processEvents (this=0x873a820, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#42 0xf731901a in QEventLoop::processEvents (this=0xff83834c, flags=...) at kernel/qeventloop.cpp:149
#43 0xf7319462 in QEventLoop::exec (this=0xff83834c, flags=...) at kernel/qeventloop.cpp:201
#44 0xf6da3fe1 in QMenu::exec (this=0x88fabf0, p=..., action=0x0) at widgets/qmenu.cpp:1993
#45 0xf6df1ac8 in QToolButtonPrivate::popupTimerDone (this=0x893c158) at widgets/qtoolbutton.cpp:943
#46 0xf6df21c2 in QToolButtonPrivate::_q_buttonPressed (this=0x893c158) at widgets/qtoolbutton.cpp:866
#47 0xf6df2416 in QToolButton::qt_metacall (this=0x893e1f8, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xff838558) at .moc/release-shared/moc_qtoolbutton.cpp:108
#48 0xf732fb33 in QMetaObject::activate (sender=0x893e1f8, from_signal_index=27, to_signal_index=27, argv=0x0) at kernel/qobject.cpp:3112
#49 0xf7330782 in QMetaObject::activate (sender=0x893e1f8, m=0xf71c3924, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3186
#50 0xf6fdc947 in QAbstractButton::pressed (this=0x893e1f8) at .moc/release-shared/moc_qabstractbutton.cpp:187
#51 0xf6d07f39 in QAbstractButtonPrivate::emitPressed (this=0x893c158) at widgets/qabstractbutton.cpp:557
#52 0xf6d0811e in QAbstractButton::mousePressEvent (this=0x893e1f8, e=0xff838cac) at widgets/qabstractbutton.cpp:1092
#53 0xf6df2e5b in QToolButton::mousePressEvent (this=0x893e1f8, e=0xff838cac) at widgets/qtoolbutton.cpp:700
#54 0xf69b087e in QWidget::event (this=0x893e1f8, event=0xff838cac) at kernel/qwidget.cpp:7545
#55 0xf6d0821e in QAbstractButton::event (this=0x893e1f8, e=0xff838cac) at widgets/qabstractbutton.cpp:1077
#56 0xf6df288a in QToolButton::event (this=0x893e1f8, event=0xff838cac) at widgets/qtoolbutton.cpp:1151
#57 0xf695a814 in QApplicationPrivate::notify_helper (this=0x873a858, receiver=0x893e1f8, e=0xff838cac) at kernel/qapplication.cpp:4056
#58 0xf69632e1 in QApplication::notify (this=0xff83a52c, receiver=0x893e1f8, e=0xff838cac) at kernel/qapplication.cpp:3758
#59 0xf788f4ad in KApplication::notify (this=0xff83a52c, receiver=0x893e1f8, event=0xff838cac) at ../../kdeui/kernel/kapplication.cpp:302
#60 0xf731a9cb in QCoreApplication::notifyInternal (this=0xff83a52c, receiver=0x893e1f8, event=0xff838cac) at kernel/qcoreapplication.cpp:610
#61 0xf696236e in QCoreApplication::sendSpontaneousEvent (receiver=0x893e1f8, event=0xff838cac, alienWidget=0x893e1f8, nativeWidget=0x87af090, buttonDown=0xf71d0aa0, lastMouseReceiver=...)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#62 QApplicationPrivate::sendMouseEvent (receiver=0x893e1f8, event=0xff838cac, alienWidget=0x893e1f8, nativeWidget=0x87af090, buttonDown=0xf71d0aa0, lastMouseReceiver=...)
    at kernel/qapplication.cpp:2924
#63 0xf69d0ea5 in QETWidget::translateMouseEvent (this=0x87af090, event=0xff83a25c) at kernel/qapplication_x11.cpp:4409
#64 0xf69d0386 in QApplication::x11ProcessEvent (this=0xff83a52c, event=0xff83a25c) at kernel/qapplication_x11.cpp:3428
#65 0xf69fa892 in x11EventSourceDispatch (s=0x873d6b0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#66 0xf5c19e98 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#67 0xf5c1d623 in ?? () from /lib/libglib-2.0.so.0
#68 0xf5c1d7a8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#69 0xf7345858 in QEventDispatcherGlib::processEvents (this=0x873a820, flags=...) at kernel/qeventdispatcher_glib.cpp:327
#70 0xf69f9fd5 in QGuiEventDispatcherGlib::processEvents (this=0x873a820, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#71 0xf731901a in QEventLoop::processEvents (this=0xff83a4c0, flags=...) at kernel/qeventloop.cpp:149
#72 0xf7319462 in QEventLoop::exec (this=0xff83a4c0, flags=...) at kernel/qeventloop.cpp:201
#73 0xf731b8b9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#74 0xf695a697 in QApplication::exec () at kernel/qapplication.cpp:3525
#75 0x08059653 in main (argc=3, argv=0xff83a934) at ../../../kopete/kopete/main.cpp:104

Reported using DrKonqi
Comment 1 Roman Jarosz 2009-10-29 22:53:08 UTC
SVN commit 1042486 by rjarosz:

Fix bug 212058: Kopete crashes when adding msn contact while offline.

BUG: 212058



 M  +10 -4     ui/wlmaddcontactpage.cpp  
 M  +11 -9     ui/wlmaddcontactpage.h  
 M  +3 -0      wlmaccount.cpp  
 M  +2 -3      wlmprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042486
Comment 2 Roman Jarosz 2009-10-30 01:18:03 UTC
SVN commit 1042522 by rjarosz:

Partially backport commit 1042486
Fix bug 212058: Kopete crashes when adding msn contact while offline.
 
CCBUG: 212058


 M  +3 -0      wlmaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042522