Fix bug 212058: Kopete crashes when adding msn contact while offline.

BUG: 212058


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1042486